# dotmap

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  _ensure_dist_files_use_version.py  requirements.txt  setup.cfg  setup.py  test_dotmap.py  update.py
.github/: FUNDING.yml
.github/workflows/: release.yml  tests.yml
dotmap/: __init__.py  test.py
tests/: test_dotmap.py
