[metadata]
name          = dotmap
version       = 1.3.30
description   = ordered, dynamically-expandable dot-access dictionary

long_description = file:README.md
long_description_content_type = text/markdown

author        = Chris Redford
author_email  = credford@gmail.com
url           = https://github.com/drgrib/dotmap
license       = MIT
# requires setuptools >= 42.0.0
license_files = LICENSE.txt

project_urls =
    Code = https://github.com/drgrib/dotmap
    Issue tracker = https://github.com/drgrib/dotmap/issues
keywords = dict, dot, map, order, ordered, ordereddict, access, dynamic


[options]
python_requires = >= 3.6

packages = dotmap

